# pykitsu

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
examples/: advanced.py  basic.py  random.py  search.py
pykitsu/: __init__.py  client.py  exceptions.py  utils.py
pykitsu/core/: get_trending.py  random.py  search.py  search_by_id.py
pykitsu/pykitsu.egg-info/: PKG-INFO  SOURCES.txt
pykitsu/utils/: __init__.py  helpers.py  tools.py
releases/: current_version.md
