[metadata]
name = pykitsu
version = 0.3.6
author = ore0Os
author_email = elhamradriss@gmail.com
description = A fast and asynchronous API wrapper for kitsue.io 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ore0Os/pykitsu
project_urls =
    Bug Tracker = https://github.com/ore0Os/pykitsu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = pykitsu
packages = find:
python_requires = >=3.8

[options.packages.find]
where = pykitsu